--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="card__inner">
           <div class="card__front" aria-hidden="true">
             <!-- Front face (visible when flipped) -->
-            <img src="assets/icon-1.svg" alt="icon 1" />
+            <img src="https://game-icons.net/icons/ffffff/000000/1x1/delapouite/warehouse.svg" class="icon-1" alt="icon 1" />
           </div>
           <div class="card__back">
             <!-- Back face (cover) -->
@@ -66,7 +66,7 @@
       <div class="card" role="button" tabindex="0" aria-pressed="false" data-card-id="1">
         <div class="card__inner">
           <div class="card__front" aria-hidden="true">
-            <img src="assets/icon-1.svg" alt="icon 1" />
+            <img src="https://game-icons.net/icons/ffffff/000000/1x1/delapouite/warehouse.svg" class="icon-1" alt="icon 1" />
           </div>
           <div class="card__back">
             <span class="logo">?</span>
