change selected option

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <div class="controls">
         <label for="difficulty">Difficulty</label>
         <select id="difficulty" aria-label="Game difficulty">
-          <option value="easy">Easy (4×3)</option>
-          <option value="medium" selected>Medium (4×4)</option>
+          <option value="easy" selected>Easy (4×3)</option>
+          <option value="medium" >Medium (4×4)</option>
           <option value="hard">Hard (6×4)</option>
         </select>
 
